add the comment api
